<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/about_alc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_alc"
        android:layout_margin="15sp"
        android:textStyle="bold"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:paddingTop="0sp"
        android:paddingBottom="15sp"
        android:background="@drawable/buttonshape"
        android:layout_centerInParent="true"
        android:textSize="15sp"
        />
    <Button
        android:id="@+id/myprofile"
        android:layout_below="@+id/about_alc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_profile"
        android:textStyle="bold"
        android:paddingTop="10sp"
         android:paddingLeft="25sp"
        android:paddingRight="25sp"
        android:layout_margin="5sp"
        android:background="@drawable/buttonshape"
        android:layout_centerInParent="true"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12sp"
        android:text="@string/welcome_msg"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:gravity="top"
        android:textStyle="bold"
        android:textAlignment="center"
        />


</RelativeLayout>