<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity" >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorPrimary">
                <ImageView
                    android:id="@+id/img_my_profile_pic"
                    android:layout_marginTop="20sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="180sp"
                    android:layout_height="180sp"
                    android:src="@drawable/mariah"/>
                <TextView
                    android:id="@+id/txt_my_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/name"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@+id/layout_name" >



                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_marginTop="8sp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:background="@android:color/white"
                    android:elevation="1sp"
                    >
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:padding="5sp"
                        android:textColor="@android:color/black"
                        android:textStyle="normal"
                        android:text="@string/track"
                        />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_marginTop="4sp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:background="@android:color/white"
                    android:elevation="1sp"
                    >
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:padding="5sp"
                        android:textColor="@android:color/black"
                        android:textStyle="normal"
                        android:text="@string/country"
                        />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_marginTop="4sp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:background="@android:color/white"
                    android:elevation="1sp"
                    >
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:padding="5sp"
                        android:textColor="@android:color/black"
                        android:textStyle="normal"
                        android:text="@string/email"
                        />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_marginTop="4sp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:background="@android:color/white"
                    android:elevation="1sp"
                    >
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:padding="5sp"
                        android:textColor="@android:color/black"
                        android:textStyle="normal"
                        android:text="@string/phone"
                        />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60sp"
                    android:layout_marginTop="4sp"
                    android:layout_marginLeft="5sp"
                    android:layout_marginRight="5sp"
                    android:background="@android:color/white"
                    android:elevation="1sp"
                    >
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:padding="5sp"
                        android:textColor="@android:color/black"
                        android:textStyle="normal"
                        android:text="@string/slack"
                        />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>